In right sidebarVideo increase bottom  padding with 4 rem

--- a/frontend/vite-project/src/AllRoute.css
+++ b/frontend/vite-project/src/AllRoute.css
@@ -150,6 +150,7 @@ padding-left:-10rem;
 padding-right: 3rem;
   margin-right: 20rem;
   margin-top: 2.3rem;
+  padding-bottom: 4rem;
     /* width: 30%;
   background-color: #1f2a38;
   color: #fff;
